2006-08-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/enums.py:
	* kiwi/interfaces.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/combomixin.py:
	* kiwi/ui/test/recorder.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/combobox.py:
	* tests/test_comboentry.py:

	Get rid of ComboMixin, use composition instead.
	Add an IEasyCombo interface reflecting the current state of the adhook 
	interface. Move the combo enums into kiwi.enums.

2006-08-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (KiwiInstallData.run_install): Take into account --root to the
	distutils install command if it's sent in.

=== 1.9.9 ===
2006-08-23  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update
	* kiwi/__version__.py: Bump

2006-08-23  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py(set_mask): Check if mask is None before converting it
	to unicode.
	* kiwi/datatypes.py:
	* kiwi/ui/widgets/entry.py:
	Datatype converters should provide a get_mask method. Fixes #2758

2006-08-22  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py: Reload the list of datatypes on every
	update of the datatype editor, so new datatypes may appear.

2006-08-21  Ronaldo Maia <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py:
	* kiwi/datatypes.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/button.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/filechooser.py:
	* kiwi/ui/widgets/fontbutton.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_datatypes.py:
	Refactor datatypes and gazpacholoader:
	Each widgets hold the allowed datatypes for itself.
	Add name attribute for the converters.

2006-08-18  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py: Refactor current to a separate file
