@@ -1,3 +1,14 @@
+2006-08-30  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/currency.py:
+	* kiwi/datatypes.py:
+	* kiwi/enums.py:
+	* kiwi/ui/objectlist.py:
+	* kiwi/ui/widgets/entry.py: 
+	Alignment support for datatypes. Fixes #2786
+
 2006-08-29  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/enums.py:
